--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.4.6
 
 flutter:
   uses-material-design: true
@@ -21,3 +22,9 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/animations/
+
+flutter_native_splash:
+  color: "#F5C400"
+  image: assets/images/crane-truck.png
+  android: false
+  ios: true
